force-app/main/default/objects/ClickSignSigner__c/ClickSignSigner__c.object-meta.xml
<CustomObject>
    <label>ClickSign Signer</label>
    <nameField>
        <label>Nome de ClickSign Signer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickSignSigners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>