force-app/main/default/objects/ClickSignSigner__c/fields/ClickSign__c.field-meta.xml
<CustomField>
    <fullName>ClickSign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClickSign</label>
    <referenceTo>ClickSign__c</referenceTo>
    <relationshipLabel>ClickSignSigners</relationshipLabel>
    <relationshipName>ClickSignSigners</relationshipName>
    <type>Lookup</type>
</CustomField>