force-app/main/default/objects/ClickSignSigner__c/fields/ContactsMapping__c.field-meta.xml
<CustomField>
    <fullName>ContactsMapping__c</fullName>
    <label>Contacts Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>