force-app/main/default/objects/ClickSignSigner__c/fields/fieldName__c.field-meta.xml
<CustomField>
    <fullName>fieldName__c</fullName>
    <label>Nome do Campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>