force-app/main/default/objects/ClickSignSigner__c/fields/RoleLabel__c.field-meta.xml
<CustomField>
    <fullName>RoleLabel__c</fullName>
    <label>RoleLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>