force-app/main/default/objects/ClickSignSigner__c/fields/SFexternalId__c.field-meta.xml
<CustomField>
    <fullName>SFexternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SF external Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>