force-app/main/default/objects/ClickSignSigner__c/fields/SignerType__c.field-meta.xml
<CustomField>
    <fullName>SignerType__c</fullName>
    <label>Tipo do destinatario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>contactId</fullName>
            </value>
            <value>
                <fullName>UserId</fullName>
            </value>
            <value>
                <fullName>object</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>