force-app/main/default/objects/ClickSignSigner__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Criado</fullName>
            </value>
            <value>
                <fullName>Notificado</fullName>
            </value>
            <value>
                <fullName>Assinado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>