force-app/main/default/objects/ClickSignSigner__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante Legal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClickSignSigners</relationshipName>
    <type>Lookup</type>
</CustomField>